# Dokura

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  compose.yaml
android/: gradle.properties  settings.gradle.kts
docs/: PRD-client.md  PRD-server.md  (+4 more)
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 43d1a9b0c7ef_stage_3_catalog_auth.py  9bc218db86e1_stage_2_scanning.py  a942647ea402_initial_metadata_schema.py
server/dokura/: __init__.py  api.py  catalog.py  config.py  constants.py  errors.py  images.py  logfiles.py  logging.py  main.py  management.py  real_zip_benchmark.py  release_benchmark.py  reset_password.py  security.py  sqlite_check.py  stage3_dataset.py  stage5_api.py  stage9_cases.py  stage9_prepare.py
server/dokura/i18n/: __init__.py  zh_cn.py
server/dokura/metadata/: __init__.py  analysis_service.py  cache_cleanup.py  database.py  filename_parser.py  migrations.py  models.py  natural_sort.py  processor.py  repository.py  scanning.py  tasks.py  watcher.py  zip_analyzer.py
server/openapi/: openapi.json
server/scripts/: analyze_content_report.py  generate_openapi.py
server/tests/: conftest.py
server/tests/integration/: test_analysis_transaction.py  test_app.py  test_database.py  test_stage2_scanning.py  test_stage3_api.py  test_stage3_dataset.py  test_stage5_management.py  test_stage8_recovery.py
server/tests/unit/: test_filename_parser.py  test_image_scheduler.py  test_logging.py  test_natural_sort.py  test_real_zip_benchmark.py  test_release_benchmark.py  test_sqlite_check.py  test_zip_analyzer.py
(+101 files in other folders)
