[project]
name = "dokura-server"
version = "0.1.0"
description = "Dokura server"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18,<1.19",
    "fastapi>=0.138,<0.139",
    "pillow>=12.1,<12.2",
    "sqlalchemy>=2.0,<2.1",
    "uvicorn[standard]>=0.40,<0.41",
    "watchfiles>=1.1,<2",
]

[project.scripts]
dokura-reset-password = "dokura.reset_password:main"

[dependency-groups]
dev = [
    "httpx2>=2.7,<2.8",
    "pytest>=9.0,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dokura"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
